<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="adapterComics"
            type="com.eman.challenge.presentation.ui.detail.DetailsCharacterAdapter" />

        <variable
            name="adapterEvents"
            type="com.eman.challenge.presentation.ui.detail.DetailsCharacterAdapter" />

        <variable
            name="adapterStores"
            type="com.eman.challenge.presentation.ui.detail.DetailsCharacterAdapter" />

        <variable
            name="adapterSeries"
            type="com.eman.challenge.presentation.ui.detail.DetailsCharacterAdapter" />

        <variable
            name="charDetail"
            type="com.eman.challenge.domain.model.DetailMarvel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDetail">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="290dp"
                    android:marvelImage="@{charDetail.thumbnail.pathExtension}"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax">


                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_marginStart="-21dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin">

                    <FrameLayout
                        android:id="@+id/img_back"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/back"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:padding="10dp"
                            android:src="@drawable/ic_back"
                            app:tint="@color/white" />

                    </FrameLayout>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fillViewport="true"
            app:behavior_overlapTop="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@{charDetail.name}"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/titleDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/titleDescription"
                    android:textColor="@color/red2"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="@id/name"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{charDetail.description}"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/name"
                    app:layout_constraintTop_toBottomOf="@+id/titleDescription" />

                <LinearLayout
                    android:id="@+id/block_comics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/txt_comic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/comics"
                        android:textColor="@color/red2"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_comic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adapter="@{adapterComics}"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_detail" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/block_events"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/block_comics"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/txt_events"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/events"
                        android:textColor="@color/red2"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_events"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adapter="@{adapterEvents}"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_detail" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/block_stories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/block_events"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/txt_stories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/stories"
                        android:textColor="@color/red2"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_stories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adapter="@{adapterStores}"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_detail" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/block_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/block_stories"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/txt_series"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/series"
                        android:textColor="@color/red2"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_series"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adapter="@{adapterSeries}"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_detail" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>